--- a/XFELIBFB/gpac2_service.template
+++ b/XFELIBFB/gpac2_service.template
@@ -2,6 +2,10 @@
 #-----------            GPAC2 SERVICE FUNCTIONS                ----------------
 #------------------------------------------------------------------------------
 
+record(longout,"$(DEV):FW-SW-VER"){
+}
+
+
 #------------------------------------------------------------------------------
 # Hardware 
 #------------------------------------------------------------------------------
