--- a/XFELPROD/gpac2_service.template
+++ b/XFELPROD/gpac2_service.template
@@ -1,6 +1,8 @@
 #------------------------------------------------------------------------------
 #-----------            GPAC2 SERVICE FUNCTIONS                ----------------
 #------------------------------------------------------------------------------
+record(longout,"$(DEV):FW-SW-CHECK"){
+}
 
 #------------------------------------------------------------------------------
 # Hardware 
