--- a/XFELPROD/gpac2_service.template
+++ b/XFELPROD/gpac2_service.template
@@ -1,7 +1,10 @@
 #------------------------------------------------------------------------------
 #-----------            GPAC2 SERVICE FUNCTIONS                ----------------
 #------------------------------------------------------------------------------
-record(longout,"$(DEV):FW-SW-CHECK"){
+record(longin,"$(DEV):FW-SW-CHECK"){
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (INP,  "@$(SRV)/0x01B8 T=UINT32") 
 }
 
 #------------------------------------------------------------------------------
