--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -1081,46 +1081,54 @@ record(ai, "$(DEV):$(PLANE)-LATVER-BPM1-UP-POS-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A0 T=FLOAT")
+  field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-LATVER-BPM1-UP-ANGLE-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A4 T=FLOAT")
+  field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-LATVER-BPM2-UP-POS-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A8 T=FLOAT")
+  field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-LATVER-BPM2-UP-ANGLE-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01AC T=FLOAT")
+  field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-LATVER-BPM1-DOWN-POS-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B0 T=FLOAT")
+  field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-LATVER-BPM1-DOWN-ANGLE-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B4 T=FLOAT")
+  field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-LATVER-BPM2-DOWN-POS-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B8 T=FLOAT")
+  field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-LATVER-BPM2-DOWN-ANGLE-M") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01BC T=FLOAT")
+  field(PREC, "3")
 }
